--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -15,7 +15,7 @@
   bottom: 0;
   left: 50%;
   width: 4px;
-  background-color: rgba(136, 146, 176, 0.3);
+  background-color: rgba(176, 136, 176, 0.3);
   transform: translateX(-50%);
   overflow: hidden;
   border-radius: 2px;
@@ -27,7 +27,12 @@
   left: 0;
   width: 100%;
   height: 0;
-  background: linear-gradient(to bottom,  var(--lightest-slate), var(--green-bright), var(--green-bright));
+  background: linear-gradient(
+    to bottom,
+    var(--lightest-slate),
+    var(--green-bright),
+    var(--green-bright)
+  );
   background-size: 100% 200%;
   z-index: 1;
   border-radius: 2px;
@@ -67,12 +72,14 @@
   align-items: center;
   justify-content: center;
   z-index: 2;
-  box-shadow: 0 0 10px rgba(100, 255, 218, 0.5);
+  box-shadow: 0 0 10px rgba(217, 138, 217, 0.5);
   transition: box-shadow 0.3s ease;
 }
 
 .timeline-dot:hover {
-  box-shadow: 0 0 15px rgba(100, 255, 218, 0.8), 0 0 25px rgba(100, 255, 218, 0.4);
+  box-shadow:
+    0 0 15px rgba(217, 138, 217, 0.8),
+    0 0 25px rgba(217, 138, 217, 0.4);
 }
 
 .timeline-icon {
@@ -93,7 +100,7 @@
 }
 
 .timeline-content::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -110,15 +117,15 @@
 
 .timeline-item.right .timeline-content {
   margin-left: 50px;
-  text-align: left; 
+  text-align: left;
 }
 
 .timeline-item.left .timeline-actions {
-  justify-content: flex-end; 
+  justify-content: flex-end;
 }
 
 .timeline-item.right .timeline-actions {
-  justify-content: flex-start; 
+  justify-content: flex-start;
 }
 
 .timeline-content h2 {
@@ -140,8 +147,8 @@
   top: 20px;
   font-weight: 600;
   color: var(--green-bright);
-  z-index: 3; 
-  padding: 2px 8px; 
+  z-index: 3;
+  padding: 2px 8px;
   border-radius: 4px;
 }
 
@@ -171,7 +178,7 @@
 }
 
 .timeline-link::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -232,7 +239,7 @@
   .timeline-progress {
     left: 30px;
   }
-  
+
   .timeline-dot {
     left: 30px;
   }
@@ -241,14 +248,14 @@
   .timeline-item.right {
     justify-content: flex-end;
   }
-  
+
   .timeline-content {
     width: calc(100% - 70px);
     margin-left: 40px !important;
     margin-right: 0 !important;
-    text-align: left !important; 
+    text-align: left !important;
   }
-  
+
   .timeline-item.left .timeline-content::after,
   .timeline-item.right .timeline-content::after {
     left: -10px;
@@ -256,7 +263,7 @@
     border-right: 10px solid var(--color-hover);
     border-left: none;
   }
-  
+
   .timeline-item.left .timeline-date,
   .timeline-item.right .timeline-date {
     left: 80px;
@@ -264,23 +271,23 @@
     top: -30px;
     font-size: 16px;
   }
-  
+
   .timeline-item.left .timeline-actions,
   .timeline-item.right .timeline-actions {
     justify-content: flex-start;
   }
-  
+
   .timeline-item.left .timeline-link,
   .timeline-item.right .timeline-link {
     margin-left: 15px;
     margin-right: 0;
   }
-  
+
   .timeline-item.left .timeline-link:first-child,
   .timeline-item.right .timeline-link:first-child {
     margin-left: 0;
   }
-  
+
   .timeline-item.left .gradient-border,
   .timeline-item.right .gradient-border {
     left: 0;
@@ -292,20 +299,20 @@
   .timeline-content {
     padding: 15px;
   }
-  
+
   .timeline-content h2 {
     font-size: 18px;
   }
-  
+
   .timeline-content p {
     font-size: 16px;
   }
-  
+
   .timeline-link {
     text-align: right;
     font-size: 14px;
   }
-  
+
   .timeline-item {
     margin: 80px 0;
   }
